# gitall.rs

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: audit.yml  ci.yml  release.yml
ci/: before_deploy.sh  cargo_out_dir  install.sh  script.sh  utils.sh
src/: cli.rs  lib.rs  main.rs  output.rs
