[package]
name = "gitall"
version = "0.5.0"
authors = ["Matthew Mahnke <mmahnke18@gmail.com>"]
edition = "2018"
description = "Executes git(1) commands in repos below a parent directory"
documentation = "https://docs.rs/gitall"
repository = "https://github.com/mattmahn/gitall.rs"
readme = "README.md"
license = "Unlicense OR MIT"
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"

[build-dependencies]
clap = "~2.33.0"

[dependencies]
atty = "~0.2.11"
clap = "~2.33.0"
num_cpus = "1"
rayon = "~1.4.0"
regex = "1"
termcolor = "~1.1.0"
walkdir = "2"
